--- a/notebooks/parse_alaska_CVR_json.ipynb
+++ b/notebooks/parse_alaska_CVR_json.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 3,
    "id": "58df72cd",
    "metadata": {},
    "outputs": [],
@@ -36,17 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 16,
    "id": "0171a2c4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "datadir = \"../../data/AlaskaSpecial22/\"  # adjust "
+    "datadir = \"../../ranked-voting/data/AlaskaSpecial22/\"  # adjust \n",
+    "exclude_ambiguous_ballots = True  # if any ballot mark has `IsAmbiguous==True` exclude the ballot "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 5,
    "id": "3504cbb3",
    "metadata": {},
    "outputs": [],
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 6,
    "id": "6286542f",
    "metadata": {},
    "outputs": [],
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 7,
    "id": "d9ddbb86",
    "metadata": {},
    "outputs": [],
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 8,
    "id": "81038167",
    "metadata": {},
    "outputs": [
@@ -102,7 +103,7 @@
        " 'NumOfRanks': 4}"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 9,
    "id": "8738dd5f",
    "metadata": {},
    "outputs": [],
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 10,
    "id": "48817d36",
    "metadata": {},
    "outputs": [
@@ -145,7 +146,7 @@
        "dict_keys(['Version', 'ElectionId', 'Sessions'])"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 11,
    "id": "c32f412e",
    "metadata": {},
    "outputs": [
@@ -174,7 +175,7 @@
        "192289"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 12,
    "id": "595c60ae",
    "metadata": {},
    "outputs": [],
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 13,
    "id": "b00fcc2c",
    "metadata": {},
    "outputs": [],
@@ -214,6 +215,47 @@
     "    aux = [i for i in s['Original']['Cards'][0]['Contests'] if i['Id']==special_id]\n",
     "    if len(aux) > 0:\n",
     "        rcv_ballots.append(aux[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "04cf5005",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Id': 69,\n",
+       " 'ManifestationId': 64,\n",
+       " 'Undervotes': 0,\n",
+       " 'Overvotes': 0,\n",
+       " 'OutstackConditionIds': [14],\n",
+       " 'Marks': [{'CandidateId': 218,\n",
+       "   'ManifestationId': 953,\n",
+       "   'PartyId': 6,\n",
+       "   'Rank': 1,\n",
+       "   'MarkDensity': 100,\n",
+       "   'IsAmbiguous': False,\n",
+       "   'IsVote': True,\n",
+       "   'OutstackConditionIds': []},\n",
+       "  {'CandidateId': 215,\n",
+       "   'ManifestationId': 955,\n",
+       "   'PartyId': 14,\n",
+       "   'Rank': 2,\n",
+       "   'MarkDensity': 100,\n",
+       "   'IsAmbiguous': False,\n",
+       "   'IsVote': False,\n",
+       "   'OutstackConditionIds': []}]}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rcv_ballots[0]"
    ]
   },
   {
@@ -229,11 +271,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 21,
    "id": "3166f4ec",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: optionally handle ambiguous marks\n",
     "def process_marks(m, id2cand, max_ranks=4):\n",
     "    if len(m) < 1:\n",
     "        return ['undervote']\n",
@@ -263,13 +306,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "id": "c8d11f2b",
+   "execution_count": 48,
+   "id": "75150813",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_ambiguous(m):\n",
+    "    return False if len(m) < 1 else any([i['IsAmbiguous'] for i in m])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "750e2f49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def num_ambiguous_marks(m):\n",
+    "    return 0 if len(m) < 1 else np.sum([i['IsAmbiguous'] for i in m])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "8ef0fd04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ambiguous-marks stats: Counter({0: 192116, 1: 143, 2: 9, 3: 7, 4: 4, 8: 3, 12: 2, 7: 2, 10: 1, 6: 1, 5: 1})\n",
+      "Total ambiguous = 281\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "cnt = []\n",
+    "tot_ambiguous = 0\n",
+    "for b in rcv_ballots:\n",
+    "    c = num_ambiguous_marks(b['Marks'])\n",
+    "    cnt.append(c)\n",
+    "    tot_ambiguous += c\n",
+    "print(f\"Ambiguous-marks stats: {Counter(cnt)}\")\n",
+    "print(f\"Total ambiguous = {tot_ambiguous}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b826888",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert everything to list of lists\n",
     "csvrows = [process_marks(k['Marks'], id2cand) for k in rcv_ballots]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "c8d11f2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Excluded 173 ambiguous ballots.\n"
+     ]
+    }
+   ],
+   "source": [
+    "## this will exclude any ballot with an ambiguous mark \n",
+    "# # Convert everything to list of lists\n",
+    "# csvrows = []\n",
+    "# ambiguous = 0\n",
+    "# for b in rcv_ballots:    \n",
+    "#     if exclude_ambiguous_ballots and is_ambiguous(b['Marks']):\n",
+    "#         ambiguous += 1\n",
+    "#         continue\n",
+    "#     csvrows.append(process_marks(b['Marks'], id2cand))\n",
+    "# if ambiguous > 0:\n",
+    "#     print(f\"INFO: Excluded {ambiguous} ambiguous ballots.\")"
    ]
   },
   {
