--- a/notebooks/parse_alaska_CVR_json.ipynb
+++ b/notebooks/parse_alaska_CVR_json.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e29d24dd",
    "metadata": {},
    "source": [
     "# Parsing the Cast-Vote Record of Alaska Special Election 09/2022\n",
@@ -14,8 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "58df72cd",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +25,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adbc05f2",
    "metadata": {},
    "source": [
     "### Download and unzip the json in your local directory. Specify your path here:\n",
@@ -36,8 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "0171a2c4",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "3504cbb3",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,8 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "6286542f",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,8 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d9ddbb86",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +73,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e67f6d69",
    "metadata": {},
    "source": [
     "This is the only IRV election: `Id==69`"
@@ -88,8 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "81038167",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +94,7 @@
        " 'NumOfRanks': 4}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +105,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bb506de",
    "metadata": {},
    "source": [
     "### Get a candidateID-to-candidateName translation table \n",
@@ -123,8 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8738dd5f",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,8 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "48817d36",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +134,7 @@
        "dict_keys(['Version', 'ElectionId', 'Sessions'])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +145,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07b6aa07",
    "metadata": {},
    "source": [
     "Each session corresponds to a ballot (that may contain vote marks for multiple races) "
@@ -165,8 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "c32f412e",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +161,7 @@
        "192289"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,8 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "595c60ae",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +181,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ade85aaf",
    "metadata": {},
    "source": [
     "Grab only race 69, i.e., the special election for House representative (the only RCV election) "
@@ -204,8 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "b00fcc2c",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,8 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "04cf5005",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +231,7 @@
        "   'OutstackConditionIds': []}]}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +242,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dfbd0cb",
    "metadata": {},
    "source": [
     "Process a single list of \"marks\" == one ranking of one voter. \n",
@@ -272,14 +253,32 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3166f4ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ballot_is_ambiguous(m):\n",
+    "    return False if len(m) < 1 else any([i['IsAmbiguous'] for i in m])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: optionally handle ambiguous marks\n",
-    "def process_marks(m, id2cand, max_ranks=4):\n",
+    "def process_marks(m, id2cand, max_ranks=4, handle_ambiguous=False):\n",
+    "    \"\"\"\n",
+    "        Returns a list of candidates; number of marks removed/ignored\n",
+    "    \"\"\"\n",
+    "    nignored = 0\n",
+    "    if handle_ambiguous:\n",
+    "        # delete all marks that are labeled ambiguous\n",
+    "        newm = [i for i in m if not i['IsAmbiguous']]\n",
+    "        nignored += len(m) - len(newm)\n",
+    "        m = newm\n",
     "    if len(m) < 1:\n",
-    "        return ['undervote']\n",
+    "        return ['undervote'], nignored        \n",
     "    m = sorted(m, key=lambda x: x['Rank'])\n",
     "    rnk = {}\n",
     "    # assign ranks and check overvotes\n",
@@ -293,12 +292,11 @@
     "    highest_rank = max([i for i in rnk.keys()])\n",
     "    for i in range(1, highest_rank):\n",
     "        rnk[i] = 'undervote' if i not in rnk else rnk[i]\n",
-    "    return [rnk[i] for i in sorted(rnk.keys())]"
+    "    return [rnk[i] for i in sorted(rnk.keys())], nignored"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "645dce4f",
    "metadata": {},
    "source": [
     "Use the above routine to process all rankings and store in `csvrows`"
@@ -306,19 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "75150813",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def is_ambiguous(m):\n",
-    "    return False if len(m) < 1 else any([i['IsAmbiguous'] for i in m])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "750e2f49",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,8 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "8ef0fd04",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -355,29 +340,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4b826888",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert everything to list of lists\n",
-    "csvrows = [process_marks(k['Marks'], id2cand) for k in rcv_ballots]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "c8d11f2b",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Excluded 173 ambiguous ballots.\n"
+      "INFO: Num ignored marks = 281\n"
      ]
     }
    ],
+   "source": [
+    "# Convert everything to list of lists\n",
+    "csvrows = []\n",
+    "nignored = 0\n",
+    "for k in rcv_ballots:\n",
+    "    r, n = process_marks(k['Marks'], id2cand, handle_ambiguous=exclude_ambiguous_ballots)                    \n",
+    "    csvrows.append(r)\n",
+    "    nignored += n\n",
+    "print(f'INFO: Num ignored marks = {nignored}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "## this will exclude any ballot with an ambiguous mark \n",
     "# # Convert everything to list of lists\n",
@@ -394,37 +383,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "id": "e0cb9d49",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['Peltola, Mary S.', 'Begich, Nick'],\n",
-       " ['Peltola, Mary S.'],\n",
-       " ['Peltola, Mary S.'],\n",
-       " ['Peltola, Mary S.'],\n",
-       " ['Peltola, Mary S.', 'Begich, Nick', 'Palin, Sarah'],\n",
-       " ['Peltola, Mary S.'],\n",
-       " ['Palin, Sarah'],\n",
-       " ['Peltola, Mary S.', 'Begich, Nick'],\n",
-       " ['Peltola, Mary S.', 'Begich, Nick', 'Palin, Sarah'],\n",
-       " ['Begich, Nick', 'Palin, Sarah', 'Peltola, Mary S.']]"
+       "[['Peltola_ Mary S.', 'Begich_ Nick'],\n",
+       " ['Peltola_ Mary S.'],\n",
+       " ['Peltola_ Mary S.'],\n",
+       " ['Peltola_ Mary S.'],\n",
+       " ['Peltola_ Mary S.', 'Begich_ Nick', 'Palin_ Sarah'],\n",
+       " ['Peltola_ Mary S.'],\n",
+       " ['Palin_ Sarah'],\n",
+       " ['Peltola_ Mary S.', 'Begich_ Nick'],\n",
+       " ['Peltola_ Mary S.', 'Begich_ Nick', 'Palin_ Sarah'],\n",
+       " ['Begich_ Nick', 'Palin_ Sarah', 'Peltola_ Mary S.']]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rankings[:10]"
+    "csvrows[:10]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fb85dafa",
    "metadata": {},
    "source": [
     "Sanity check: overvotes, undervotes"
@@ -432,8 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
-   "id": "23380fd8",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,8 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "id": "2647b704",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +456,7 @@
        "  'Marks': []}]"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,38 +466,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 148,
-   "id": "a1e5a194",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['Peltola_ Mary S.', 'Begich_ Nick'],\n",
-       " ['Peltola_ Mary S.'],\n",
-       " ['Peltola_ Mary S.'],\n",
-       " ['Peltola_ Mary S.'],\n",
-       " ['Peltola_ Mary S.', 'Begich_ Nick', 'Palin_ Sarah'],\n",
-       " ['Peltola_ Mary S.'],\n",
-       " ['Palin_ Sarah'],\n",
-       " ['Peltola_ Mary S.', 'Begich_ Nick'],\n",
-       " ['Peltola_ Mary S.', 'Begich_ Nick', 'Palin_ Sarah'],\n",
-       " ['Begich_ Nick', 'Palin_ Sarah', 'Peltola_ Mary S.']]"
-      ]
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "csvrows[:10]"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "c67778e3",
    "metadata": {},
    "source": [
     "### Save as CSV file of your choosing"
@@ -520,13 +474,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "id": "2057bdc5",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "pd.DataFrame(csvrows).to_csv('tmp.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
